test/mpi/errors/faults/Makefile.sm
INCLUDES = -I../../include -I${top_srcdir}/include
LDADD = ../../util/mtest.o 
DEPADD = @MPILIBLOC@ ../../util/mtest.o
smvar_do_sharedlibs = 0

pt2ptf1_SOURCES = pt2ptf1.c
pt2ptf2_SOURCES = pt2ptf2.c
collf1_SOURCES  = collf1.c
collf2_SOURCES  = collf2.c

../../util/mtest.o: 
	(cd ../../util && make mtest.o)

testing:
	../../runtests -srcdir=$(srcdir) -tests=testlist \
			-mpiexec=$(bindir)/mpiexec \
		   	-xmlfile=summary.xml
